Fix strong applying wrong font on blog

--- a/resources/css/front/utilities/markup.css
+++ b/resources/css/front/utilities/markup.css
@@ -15,7 +15,6 @@
 }
 
 .markup strong {
-    @apply font-sans;
     @apply font-bold;
 }
 
